[gd_scene load_steps=4 format=3 uid="uid://brq3vl8gyxcx7"]

[ext_resource type="Texture2D" uid="uid://cmmnq4dndfrlt" path="res://Art/THEKING/spikes.png" id="1_0ndmk"]
[ext_resource type="Script" path="res://Art/THEKING/thorns.gd" id="1_re264"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ixkrn"]
radius = 24.0208

[node name="Node2D" type="Area2D"]
scale = Vector2(3.84, 3.84)
script = ExtResource("1_re264")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.214287, 0)
shape = SubResource("CircleShape2D_ixkrn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_0ndmk")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
